--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -241,7 +241,7 @@ ul.blog-posts li a:visited {
 </p>
 
 <content>
-  <p><strong>Halo semua</strong>, ini postingan pertama saya. Lagi belajar hugo nih. Struktur hugo-nya sih agak paham dikit-dikit (dikit banget). Nah, git commit git push-nya ini yang nggak ngerti-ngerti.</p>
+  <p><strong>Halo semua,</strong> ini postingan pertama saya. Lagi belajar hugo nih. Struktur hugo-nya sih agak paham dikit-dikit (dikit banget). Nah, git commit git push-nya ini yang nggak ngerti-ngerti.</p>
 
 </content>
 <p>
