edit postingan kedua

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ ul.blog-posts li a:visited {
           </time>
         </i>
       </span>
-      <a href="https://note.galuhmaher.com/postingan-kedua/">Postingan Kedua</a>
+      <a href="https://note.galuhmaher.com/postingan-kedua-edit/">Postingan Kedua Edit</a>
     </li>
     
     <li>
