edit first post

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 
 
 <meta property="og:url" content="https://note.galuhmaher.com/404.html">
-  <meta property="og:site_name" content="Galuh Maher Note">
+  <meta property="og:site_name" content="📄 Note">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Hugo &#43; Bear = :heart:">
   <meta property="og:locale" content="id_ID">
@@ -44,7 +44,7 @@
     --font-secondary: 'Noto Sans', system-ui, -apple-system,
       BlinkMacSystemFont, 'Ubuntu', 'Segoe UI', 'Oxygen-Sans', 'Helvetica Neue', Arial, sans-serif;
     --font-scale: 1em;
-    --background-color: #fff;
+    --background-color: #fffff8;
     --heading-color: #222;
     --text-color: #444;
     --link-color: #bd0014;
@@ -211,7 +211,7 @@ ul.blog-posts li a:visited {
 
 <body>
   <header><a href="/" class="title">
-  <h2>Galuh Maher Note</h2>
+  <h2>📄 Note</h2>
 </a>
 <nav><a href="/">HOME</a>
 <a href="https://galuhmaher.com/">BLOG</a>
@@ -226,7 +226,7 @@ ul.blog-posts li a:visited {
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer>Copyright © 2023-<script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> <a href='https://galuhmaher.com/' title='Blog' >Galuh Maher</a>
+  <footer>Copyright © <script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> <a href='https://galuhmaher.com/' title='Blog' >Galuh Maher</a>
 </footer>
 
     
