--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ ul.blog-posts li a:visited {
 <p><img src="https://telegra.ph/file/34485789250f36c965324.png" alt="galuhmaher-logo">
 Website ini adalah tempat saya nulis-nulis random. Kunjungi juga blog utama saya di <a href="https://galuhmaher.com">galuhmaher.com</a>.</p>
 <div class="sh-youtube"> 
-    <iframe src="https://www.youtube.com/embed/videoseries?si=0EoqCYkh_EDap2OC&amp;" 
+    <iframe src="https://www.youtube.com/embed/videoseries?si=0EoqCYkh_EDap2OC&amp;list=PLaxauk3chSWgwI1W0yo5Bv9GAn1O1cwKB" 
     frameborder="0" allowfullscreen class="video"></iframe>
 </div>
 <h2 id="recent-blog-posts">Recent blog posts</h2>
